# verbose-broccoli

./: Cargo.toml  Dockerfile  LICENSE  README.md  sqlx-data.json
.github/workflows/: cargo-build.yml  docker-build.yml
src/: lib.rs  machine.rs  main.rs  models.rs  report.rs  room.rs  user.rs
