[package]
name = "laundry-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = "1"
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-actix-native-tls",
    "chrono",
] }
syslog = "6"
utoipa = { version = "3.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
