[package]
name = "laundry-api"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Highfield"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5" }
log = "0.4"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.6", features = [
    "time",
    "offline",
    "postgres",
    "runtime-actix-native-tls",
] }
syslog = "6.1"
time = { version = "0.3", features = ["serde"] }
utoipa = { version = "3.4", features = ["actix_extras", "time"] }
utoipa-swagger-ui = { version = "7.0", features = ["actix-web"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
